--- a/test.ipynb
+++ b/test.ipynb
@@ -62,21 +62,21 @@
     }
    ],
    "source": [
-    "from flask import Flask\n",
+    "# from flask import Flask\n",
     "\n",
-    "app = Flask(__name__)\n",
+    "# app = Flask(__name__)\n",
     "\n",
-    "@app.route('/')\n",
-    "def home():\n",
-    "    return \"Hello from Flask!\"\n",
+    "# @app.route('/')\n",
+    "# def home():\n",
+    "#     return \"Hello from Flask!\"\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    app.run(debug=True, use_reloader=False)"
+    "# if __name__ == '__main__':\n",
+    "#     app.run(debug=True, use_reloader=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -92,18 +92,18 @@
     }
    ],
    "source": [
-    "from flask import Flask, jsonify\n",
-    "from flask_cors import CORS  # Import CORS\n",
+    "# from flask import Flask, jsonify\n",
+    "# from flask_cors import CORS  # Import CORS\n",
     "\n",
-    "app = Flask(__name__)\n",
-    "CORS(app)  # Enable CORS for the entire app\n",
+    "# app = Flask(__name__)\n",
+    "# CORS(app)  # Enable CORS for the entire app\n",
     "\n",
-    "@app.route('/api/hello', methods=['GET'])\n",
-    "def hello():\n",
-    "    return jsonify({\"message\": \"Hello from Flask!\"})\n",
+    "# @app.route('/api/hello', methods=['GET'])\n",
+    "# def hello():\n",
+    "#     return jsonify({\"message\": \"Hello from Flask!\"})\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    app.run(port=5000)\n"
+    "# if __name__ == \"__main__\":\n",
+    "#     app.run(port=5000)\n"
    ]
   }
  ],
