update creating the database in __init__.py file

--- a/test.ipynb
+++ b/test.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -37,41 +37,24 @@
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [24/Nov/2024 21:01:41] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [24/Nov/2024 21:42:51] \"GET /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 21:43:30] \"POST /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 21:48:05] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:14:32] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:14:41] \"POST /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:15:22] \"POST /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:15:32] \"POST /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:35:07] \"POST /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:38:32] \"POST /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:44:48] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:44:59] \"GET /form-submit HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:45:05] \"GET /form_submit HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:46:33] \"GET /form_submit HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:46:37] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:46:43] \"POST /submit-form HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:48:59] \"GET /app.py HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:49:20] \"GET /testFlask HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:49:26] \"GET /testFlask/app.py HTTP/1.1\" 404 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:49:31] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [24/Nov/2024 22:50:54] \"GET /form-submit HTTP/1.1\" 404 -\n"
+      "127.0.0.1 - - [30/Nov/2024 00:10:32] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [30/Nov/2024 00:10:32] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [30/Nov/2024 00:15:13] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [30/Nov/2024 00:15:13] \"GET /favicon.ico HTTP/1.1\" 404 -\n"
      ]
     }
    ],
    "source": [
-    "# from flask import Flask\n",
+    "from flask import Flask\n",
     "\n",
-    "# app = Flask(__name__)\n",
+    "app = Flask(__name__)\n",
     "\n",
-    "# @app.route('/')\n",
-    "# def home():\n",
-    "#     return \"Hello from Flask!\"\n",
+    "@app.route('/')\n",
+    "def home():\n",
+    "    return \"Hello from Flask!\"\n",
     "\n",
-    "# if __name__ == '__main__':\n",
-    "#     app.run(debug=True, use_reloader=False)"
+    "if __name__ == '__main__':\n",
+    "    app.run(debug=True, use_reloader=False)"
    ]
   },
   {
